@@ -4,8 +4,9 @@ SRCDIR=sources/visualization_interfaces/Monika
 OAR_PERLLIB=$(SRCDIR)/lib
 
 SHAREDIR_FILES= $(SRCDIR)/monika.conf.in \
-		  $(SRCDIR)/userInfos.cgi \
-		  $(SRCDIR)/monika.cgi.in \
+		  $(SRCDIR)/userInfos.cgi
+
+CGIDIR_FILES = $(SRCDIR)/monika.cgi.in
 
 
 WWWDIR_FILES = $(SRCDIR)/monika.css
@@ -19,13 +20,9 @@ build: build_shared
 	# Nothing to do
 
 install: install_shared
-	install -d $(DESTDIR)$(CGIDIR)/monika
-	install -m 0644  $(SRCDIR)/monika.cgi $(DESTDIR)$(CGIDIR)/monika/monika.cgi
+	# Nothing to do
 
 uninstall: uninstall_shared
-	rm -f \
-	    $(DESTDIR)$(CGIDIR)/monika/monika.cgi
-	-rmdir \
-	    $(DESTDIR)$(CGIDIR)/monika
+	# Nothing to do
 
 .PHONY: install setup uninstall build clean
