@@ -4,7 +4,5 @@ monika_setup() {
         ${SHAREDIR}/monika.conf \
         ${OARCONFDIR}/monika.conf \
         0600 \
-        ${OAROWNER}
-    set_rights ${CGIDIR}/monika                  0755 ${OAROWNER} ${OAROWNERGROUP}
-    set_rights ${CGIDIR}/monika/monika.cgi       0755 ${OAROWNER} ${OAROWNERGROUP}
+        ${WWWUSER}
 }
