@@ -1,8 +1,8 @@
 package OAR::Version;
 require Exporter;
 
-my $OARVersion = "2.5.5+rc1";
-my $OARName = "Froggy Summer";
+my $OARVersion = "2.5.5";
+my $OARName = "The Force Awakens";
 
 sub get_version(){
     return $OARVersion." (".$OARName.")";
